--- a/package.json
+++ b/package.json
@@ -6,6 +6,16 @@
   "repository": "git@github-emilMircea:emilMircea/nodeapp.git",
   "author": "emilMircea <emil-mircea@protonmail.com>",
   "license": "MIT",
+  "scripts": {
+    "prod": "node ./start.js",
+    "watch": "nodemon ./start.js --ignore public/",
+    "start": "concurrently \"npm run watch\" \"npm run assets\" --names \"💻,📦\" --prefix name",
+    "assets": "webpack -w --display-max-modules 0",
+    "sample": "node ./data/load-sample-data.js",
+    "blowitallaway": "node ./data/load-sample-data.js --delete",
+    "now": "now -e DB_USER=@db_user -e DB_PASS=@db_pass -e NODE_ENV=\"production\" -e PORT=80"
+  },
+  "browserslist": "last 2 versions",
   "dependencies": {
     "axios": "^0.16.1",
     "body-parser": "^1.17.1",
@@ -16,6 +26,7 @@
     "dotenv": "^4.0.0",
     "es6-promisify": "^5.0.0",
     "express": "^4.15.2",
+    "express-session": "^1.15.2",
     "express-validator": "^3.2.0",
     "faker": "^4.1.0",
     "forever": "^0.15.3",
